tests/core/ill-typed/missing_main/missing-main-2.stella
language core;

fn chck(b : Bool) -> Bool {
  return (if true then false else true)
}
